# hpbf

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: optimizer.rs
examples/: README.md  h.bf  hello.bf  hello2.bf  widthcheck.bf
src/: analy.rs  ast.rs  bc.rs  codegen.rs  exec.rs  hasher.rs  ir.rs  lib.rs  llvmjit.rs  main.rs  opt.rs  runtime.rs  smallvec.rs
src/exec/: baseint.rs  basejit.rs  bcint.rs  inplace.rs  irint.rs  llvmjit.rs  mod.rs  testdef.rs
src/exec/basejit/: asm.rs  codegen.rs  mod.rs
src/exec/bcint/: mod.rs  ops.rs
tmp/: ast.backup.rs
